# filetags

./: .gitignore  Integration.org  README.org  filetag.py  filetags.py  pyproject.toml  requirements.txt  setup.py  vktag.py
.github/workflows/: ci_pytest.yml  codeql-analysis.yml
filetags/: Register_filetags_for_Windows_context_menu_TEMPLATE.reg  __init__.py  register_filetags_for_send_to_folder.py
tests/: call_tests.sh  test_unit_tests.py  unit_tests.py
