[project]
name = "filetags"
description = "Management of simple tags within file names"
# readme = "README.org"
version = "2025.09.02.1"
keywords = ["tagging", "tags", "file managing", "file management", "files", "tagtrees", "tagstore", "tag-based navigation", "tag-based filter"]

# sequence along https://pypi.org/classifiers
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    ]

authors = [{name="Karl Voit", email="tools@Karl-Voit.at"}]
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"  # see https://devguide.python.org/versions/
dependencies = [
    "clint>=0.5.1",
    "colorama>=0.4.6",
    "pyreadline3>=3.5.4",
    "pypiwin32; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/novoid/filetags"
Repository = "https://github.com/novoid/filetags"
Issues = "https://github.com/novoid/filetags/issues"

[project.scripts]
filetags="filetags:main"

