[project]
name = "filetags"
description = "Management of simple tags within file names and retrieval methods using those tags"
# readme = "README.org"
readme = {text = """
This Python script adds or removes tags to file names in the following form:

- file without time stamp in name -- tag2.txt
- file name with several tags -- tag1 tag2.jpeg
- another example file name with multiple example tags -- fun videos kids.mpeg
- 2013-05-09 a file name with ISO date stamp in name -- tag1.jpg
- 2013-05-09T16.17 file name with time stamp -- tag3.csv

The script accepts an arbitrary number of files (see your shell for possible length limitations).

- Target group: users who are able to use command line tools and who are using tags in file names.
- Hosted and documented on github: https://github.com/novoid/filetags
""", content-type = "text/plain"}
version = "2025.11.16.1"
keywords = ["tagging", "tags", "file managing", "file management", "files", "tagtrees", "tagstore", "tag-based navigation", "tag-based filter"]

# sequence along https://pypi.org/classifiers
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    ]

authors = [{name="Karl Voit", email="tools@Karl-Voit.at"}]
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"  # see https://devguide.python.org/versions/
dependencies = [
    "clint>=0.5.1",
    "colorama>=0.4.6",
    "pyreadline3>=3.5.4",
    "pypiwin32; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/novoid/filetags"
Repository = "https://github.com/novoid/filetags"
Issues = "https://github.com/novoid/filetags/issues"

[project.scripts]
filetags="filetags:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
filetags = ["Register_filetags_for_Windows_context_menu_TEMPLATE.reg"]


